[gd_scene load_steps=7 format=3 uid="uid://52vbpdjmqg0y"]

[ext_resource type="Script" uid="uid://b3h5wfxl13x1l" path="res://entities/tanks/base/ammo_stat.gd" id="1_ncrx1"]
[ext_resource type="Texture2D" uid="uid://dvi5v10167436" path="res://assets/graphics/projectiles/ap_shell.png" id="1_xhpm1"]
[ext_resource type="Texture2D" uid="uid://boht7lhjuayyi" path="res://assets/graphics/projectiles/tank_bullet3.png" id="2_ncrx1"]
[ext_resource type="Texture2D" uid="uid://bujjlwtp52vgs" path="res://assets/graphics/projectiles/he_shell.png" id="3_mb5o4"]
[ext_resource type="Texture2D" uid="uid://bxx8b70nmy7hn" path="res://assets/graphics/projectiles/heat_shell.png" id="4_ca7d5"]

[sub_resource type="LabelSettings" id="LabelSettings_hjgt5"]
font_size = 9
font_color = Color(0.015686275, 0.011764706, 0.011764706, 1)
outline_color = Color(0.015686275, 0.015686275, 0.011764706, 1)

[node name="ammo_stat" type="Node2D"]
script = ExtResource("1_ncrx1")

[node name="ap" type="TextureProgressBar" parent="."]
offset_left = -20.0
offset_top = 12.0
offset_bottom = 21.0
nine_patch_stretch = true
texture_progress = ExtResource("1_xhpm1")

[node name="count" type="Label" parent="ap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_hjgt5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="missile" type="TextureProgressBar" parent="."]
offset_left = 5.0
offset_top = 12.0
offset_right = 25.0
offset_bottom = 21.0
nine_patch_stretch = true
texture_progress = ExtResource("2_ncrx1")

[node name="count" type="Label" parent="missile"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_hjgt5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="he" type="TextureProgressBar" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_bottom = -11.0
nine_patch_stretch = true
texture_progress = ExtResource("3_mb5o4")

[node name="count" type="Label" parent="he"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_hjgt5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="heat" type="TextureProgressBar" parent="."]
offset_left = 5.0
offset_top = -20.0
offset_right = 25.0
offset_bottom = -11.0
nine_patch_stretch = true
texture_progress = ExtResource("4_ca7d5")

[node name="count" type="Label" parent="heat"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_hjgt5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="v_ap" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_xhpm1")

[node name="v_he" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_mb5o4")

[node name="v_heat" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ca7d5")

[node name="v_missile" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ncrx1")
